Add softmax cases
Signed-off-by: Cao, Zhong <zhong.z.cao@intel.com>

--- a/csrc/Makefile
+++ b/csrc/Makefile
@@ -1,4 +1,5 @@
-CXXFLAGS=-g -xICELAKE-SERVER -O0 -std=c++11
-CXX=icc
+# CXXFLAGS=-g -xICELAKE-SERVER -O3 -std=c++11
+CXXFLAGS=-march=native -mtune=native -O3 -std=c++14
+CXX=g++
 
 main : main.cpp
