--- a/csrc/Makefile
+++ b/csrc/Makefile
@@ -1,5 +1,6 @@
-CXXFLAGS=-g -xHOST -O3 -std=c++14
-# CXXFLAGS=-march=native -mtune=native -O3 -std=c++14
-CXX=icpc
+# CXXFLAGS=-g -xHOST -O3 -std=c++14
+CXXFLAGS=-march=native -mtune=native -O0 -g -std=c++14 -Wall -Wno-unknown-pragmas
+# CXX=icpc
+CXX=g++
 
-main : main.cpp softmax.cpp
+main : main.cpp
