--- a/csrc/Makefile
+++ b/csrc/Makefile
@@ -1,5 +1,5 @@
 # CXXFLAGS=-g -xHOST -O3 -std=c++14
-CXXFLAGS=-march=native -mtune=native -O0 -g -std=c++14 -Wall -Wno-unknown-pragmas
+CXXFLAGS=-march=native -mtune=native -O3 -g -std=c++14 -Wall -Wno-unknown-pragmas -Dusercp
 # CXX=icpc
 CXX=g++
 
