Seperate tpps from Torch ext
Signed-off-by: Cao, Zhong <zhong.z.cao@intel.com>

--- a/csrc/tpps/Makefile
+++ b/csrc/tpps/Makefile
@@ -1,4 +1,4 @@
-CXXFLAGS=-march=native -mtune=native -fma -O3 -std=c++14 -Wall -Wno-unknown-pragmas -Dusercp
+CXXFLAGS=-fPIC -march=native -mtune=native -fma -O3 -std=c++14 -Wall -Wno-unknown-pragmas -Dusercp
 CXX=icpc
 
 kernels=i_gelu_tpp.cpp i_layernorm_tpp.cpp i_mha_tpp.cpp i_softmax_tpp.cpp i_gelu_tpp.hpp \
