Start MHA testing
Signed-off-by: Cao Zhong Z <zhong.z.cao@intel.com>

--- a/csrc/tpps/Makefile
+++ b/csrc/tpps/Makefile
@@ -1,8 +1,6 @@
 CXX=icpc
-CXXFLAGS=-fPIC -fopenmp -xSAPPHIRERAPIDS -fma -O3 -std=c++14 -Wall -Dusercp
-
-# CXX=g++
-# CXXFLAGS=-fPIC -fopenmp -march=native -mfma -O3 -std=c++14 -Wall -Dusercp
+OPT=-g -O0
+CXXFLAGS=-fPIC -fopenmp -xSAPPHIRERAPIDS -fma $(OPT) -std=c++14 -Wall -Dusercp
 
 kernels=i_gelu_tpp.cpp i_layernorm_tpp.cpp i_mha_tpp.cpp i_softmax_tpp.cpp i_gelu_tpp.hpp \
 				i_layernorm_tpp.hpp i_mha_tpp.hpp  i_softmax_tpp.hpp
@@ -12,7 +10,9 @@ all : libtpps.a
 libtpps.a : $(kernels:.cpp=.o)
 	ar rcs $@ $^
 
+mha_test : mha_test.cpp libtpps.a
+
 main : main.cpp libtpps.a
 
 clean :
-	rm -f *.a *.o
+	rm -f *.a *.o main mha_test
