--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,11 +39,12 @@ add_subdirectory(onednn)
 set(tpps_src csrc/tpps/i_softmax_tpp.cpp csrc/tpps/i_gelu_tpp.cpp
   csrc/tpps/i_layernorm_tpp.cpp csrc/tpps/i_mha_tpp.cpp)
 set(plugin_src csrc/init.cpp csrc/linear.cpp csrc/cpu.cpp csrc/softmax.cpp
-  csrc/amx_mha.cpp csrc/activation.cpp csrc/normalization.cpp csrc/helper.cpp)
+  csrc/amx_mha.cpp csrc/activation.cpp csrc/normalization.cpp)
 
 if (BUILD_TPPS_INTREE)
   list(APPEND plugin_src ${tpps_src})
 endif(BUILD_TPPS_INTREE)
+
 
 add_library(mlperf_plugins SHARED ${plugin_src})
 set_property(TARGET mlperf_plugins PROPERTY CXX_STANDARD 14)
@@ -69,5 +70,5 @@ target_link_libraries(dnnl PUBLIC ${OpenMP_CXX_LIBRARIES})
 target_link_libraries(mlperf_plugins "${TORCH_LIBRARIES}" dnnl ${OpenMP_CXX_LIBRARIES})
 
 if(NOT BUILD_TPPS_INTREE)
-target_link_libraries(mlperf_plugins tpps)
+  target_link_libraries(mlperf_plugins tpps)
 endif(NOT BUILD_TPPS_INTREE)
