--- a/csrc/tpps/Makefile
+++ b/csrc/tpps/Makefile
@@ -1,5 +1,5 @@
 CXX=icpc
-CXXFLAGS=-fPIC -fopenmp -march=native -mtune=native -fma -O3 -std=c++14 -Wall -Dusercp
+CXXFLAGS=-fPIC -fopenmp -xHOST -fma -O3 -std=c++14 -Wall -Dusercp
 
 kernels=i_gelu_tpp.cpp i_layernorm_tpp.cpp i_mha_tpp.cpp i_softmax_tpp.cpp i_gelu_tpp.hpp \
 				i_layernorm_tpp.hpp i_mha_tpp.hpp  i_softmax_tpp.hpp
