Fix alignment and makefile
Signed-off-by: Cao Zhong Z <zhong.z.cao@intel.com>

--- a/csrc/tpps/Makefile
+++ b/csrc/tpps/Makefile
@@ -1,6 +1,9 @@
 CXX=icpc
-OPT=-g -O3
-CXXFLAGS=-fPIC -fopenmp -xHOST -fma $(OPT) -std=c++14 -Wall -Dusercp
+OPT=-g -O2
+CXXFLAGS=-fPIC -fopenmp -xHOST -fma $(OPT) -std=c++14 -Wall -Dusercp -ftz
+# CXX=g++
+# OPT=-O3
+# CXXFLAGS=-fPIC -fopenmp -march=native -mfma $(OPT) -std=c++14 -Dusercp
 
 kernels=i_gelu_tpp.cpp i_layernorm_tpp.cpp i_mha_tpp.cpp i_softmax_tpp.cpp i_gelu_tpp.hpp \
 				i_layernorm_tpp.hpp i_mha_tpp.hpp  i_softmax_tpp.hpp
