--- a/csrc/tpps/Makefile
+++ b/csrc/tpps/Makefile
@@ -1,8 +1,8 @@
-CXX=icpc
-CXXFLAGS=-fPIC -fopenmp -xHOST -fma -O3 -std=c++14 -Wall -Dusercp
+# CXX=icpc
+# CXXFLAGS=-fPIC -fopenmp -xHOST -fma -O3 -std=c++14 -Wall -Dusercp
 
-# CXX=g++
-# CXXFLAGS=-fPIC -fopenmp -march=native -mfma -O3 -std=c++14 -Wall -Dusercp
+CXX=g++
+CXXFLAGS=-fPIC -fopenmp -march=native -mfma -O3 -std=c++14 -Wall -Dusercp
 
 kernels=i_gelu_tpp.cpp i_layernorm_tpp.cpp i_mha_tpp.cpp i_softmax_tpp.cpp i_gelu_tpp.hpp \
 				i_layernorm_tpp.hpp i_mha_tpp.hpp  i_softmax_tpp.hpp i_linear_tpp.hpp
