add gemm interface done

--- a/csrc/tpps/Makefile
+++ b/csrc/tpps/Makefile
@@ -1,7 +1,7 @@
 # CXX=icpc
 # CXXFLAGS=-fPIC -fopenmp -xHOST -fma -O3 -std=c++14 -Wall -Dusercp
 
-CXX = clang++
+CXX = g++
 CXXFLAGS = -fPIC -fopenmp -march=native -mfma -O3 -std=c++14 -Wall -Dusercp
 
 SRCS = main.cpp i_gelu_tpp.cpp i_layernorm_tpp.cpp i_mha_tpp.cpp i_softmax_tpp.cpp helper.cpp amx_config.cpp i_linear_tpp.cpp
