add avx512 load and store

--- a/csrc/tpps/Makefile
+++ b/csrc/tpps/Makefile
@@ -4,7 +4,7 @@
 CXX = g++
 CXXFLAGS = -fPIC -fopenmp -march=native -mfma -O3 -std=c++14 -Wall -Dusercp
 
-SRCS = main.cpp i_gelu_tpp.cpp i_layernorm_tpp.cpp i_mha_tpp.cpp i_softmax_tpp.cpp helper.cpp amx_config.cpp i_linear_tpp.cpp
+SRCS = main.cpp helper.cpp amx_config.cpp i_linear_tpp.cpp
 
 OBJS = $(SRCS:.cpp=.o)
 
