fix amx_linear cpp test

--- a/csrc/tpps/Makefile
+++ b/csrc/tpps/Makefile
@@ -1,10 +1,10 @@
 # CXX=icpc
 # CXXFLAGS=-fPIC -fopenmp -xHOST -fma -O3 -std=c++14 -Wall -Dusercp
 
-CXX = g++
+CXX = clang++
 CXXFLAGS = -fPIC -fopenmp -march=native -mfma -O3 -std=c++14 -Wall -Dusercp
 
-SRCS = main.cpp helper.cpp amx_config.cpp i_linear_tpp.cpp test_gemm.cpp
+SRCS = main.cpp helper.cpp i_linear_tpp.cpp test_gemm.cpp ../amx_init.cpp
 
 OBJS = $(SRCS:.cpp=.o)
 
