--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,7 +41,7 @@ set(tpps_src csrc/tpps/i_softmax_tpp.cpp csrc/tpps/i_gelu_tpp.cpp csrc/tpps/i_li
   csrc/tpps/frame_splicing_tpp.cpp csrc/tpps/tanh_tpp.cpp csrc/tpps/sigmoid_tpp.cpp csrc/tpps/lstm_postop_tpp.cpp)
 set(plugin_src csrc/init.cpp csrc/amx_init.cpp csrc/linear.cpp csrc/cpu.cpp csrc/softmax.cpp
   csrc/amx_mha.cpp csrc/amx_mha_concat.cpp csrc/amx_linear.cpp csrc/activation.cpp csrc/normalization.cpp
-  csrc/preemphasis.cpp csrc/frame_splicing.cpp csrc/lstm.cpp csrc/lstm_postop.cpp csrc/lstm_int8.cpp)
+  csrc/preemphasis.cpp csrc/frame_splicing.cpp csrc/lstm.cpp csrc/lstm_postop.cpp csrc/lstm_layer_int8.cpp)
 
 if (BUILD_TPPS_INTREE)
   list(APPEND plugin_src ${tpps_src})
