--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,12 @@
 build
 __pycache__
-csrc/*.bk
-csrc/tpps/*.bk
-csrc/tpps/*.a
-csrc/tpps/xxx.exe
-csrc/tpps/*.log
-csrc/tpps/*.o
-csrc/tpps/perf.data
-csrc/tpps/perf.data.old
-csrc/tpps/r000macc
-csrc/tpps/r001hpc
+*.bk
+*.bk
+*.a
+*.exe
+*.log
+*.o
+perf.data
+perf.data.old
+r000macc
+r001hpc
