add custom stft

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,7 +43,7 @@ set(tpps_src csrc/tpps/i_softmax_tpp.cpp csrc/tpps/i_gelu_tpp.cpp csrc/tpps/i_li
 set(plugin_src csrc/init.cpp csrc/amx_init.cpp csrc/linear.cpp csrc/cpu.cpp csrc/softmax.cpp
   csrc/amx_mha.cpp csrc/amx_mha_concat.cpp csrc/amx_linear.cpp csrc/activation.cpp csrc/normalization.cpp
   csrc/preemphasis.cpp csrc/frame_splicing.cpp csrc/stack_time.cpp csrc/lstm.cpp csrc/lstm_postop.cpp
-  csrc/lstm_amx.cpp csrc/greedy_decode_update.cpp csrc/power_spectrum.cpp)
+  csrc/lstm_amx.cpp csrc/greedy_decode_update.cpp csrc/power_spectrum.cpp csrc/stft.cpp)
 
 if (BUILD_TPPS_INTREE)
   list(APPEND plugin_src ${tpps_src})
